# argus

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bentofile.yaml  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  docker-build.yml  model-eval.yml  promote.yml  retrain-schedule.yml
docs/: model_card.md  runbooks.md
feature_repo/: definitions.py  feature_store.yaml  v_selected.json
feature_repo/data/: registry.db
infra/: docker-compose.multi.yml  docker-compose.yml
infra/alertmanager/: alertmanager.yml
infra/docker/: app.Dockerfile  mlflow.Dockerfile
infra/grafana/dashboards/: business.json  drift.json  slo.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/k8s/: README.md
infra/k8s/base/: configmap.yaml  consumer-deployment.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  monitor-deployment.yaml  monitor-secret.env.example  networkpolicy.yaml  pdb.yaml  secret.env.example  service.yaml  serviceaccount.yaml
infra/k8s/overlays/canary/: canary-deployment.yaml  kustomization.yaml  weighted-route.yaml
infra/prometheus/: alerts.yml  prometheus.yml
pipelines/: deployments.py
pipelines/flows/: monitoring_pipeline.py  retraining_pipeline.py  training_pipeline.py
reports/: validation_report.json
scripts/: check_pipeline_deps.py
src/fraud/: calibrator.py  config.py  dataset.py  model_loader.py  params.py  paths.py  registry.py
src/fraud/common/: __init__.py  lineage.py  logging.py  seed.py  shutdown.py
src/fraud/data/: clean.py  split.py
src/fraud/evaluation/: __init__.py  _coercion.py  backtest.py  business.py  calibration.py  gate.py  metrics.py  reports.py  threshold.py
src/fraud/features/: build_offline.py  materialize.py  registry.py  select_v.py  store.py
src/fraud/ingestion/: consumer.py  download.py  label_simulator.py  producer.py  retrain_trigger.py  stream.py
src/fraud/monitoring/: baseline.py  config.py  drift.py  exporter.py  perf_monitor.py
src/fraud/serving/: canary.py  config.py  features.py  inference_log.py  model.py  predict.py  reload.py  security.py  service.py
src/fraud/streaming/: events.py  transport.py
src/fraud/training/: dataset.py  features.py  models.py  registry.py  train.py  tune.py
src/fraud/transforms/: encoders.py  feature_logic.py  features.py
src/fraud/validation/: schemas.py  validate.py
tests/: conftest.py
tests/data/: test_clean.py  test_schemas.py  test_split.py
tests/model/: test_train_serve_skew.py  test_training.py
tests/unit/: test_alerts_params_sync.py  test_backtest.py  test_baseline.py  test_build_offline.py  test_business.py  test_calibration.py  test_canary.py  test_champion_metrics.py  test_champion_reload.py  test_common.py  test_config.py  test_consumer.py  test_drift.py  test_encoders.py  test_exporter.py  test_feature_logic.py  test_features.py  test_gate.py  test_inference_log.py  test_label_simulator.py  test_materialize.py  test_metrics.py  test_model_loader.py  test_models.py  test_monitoring_config.py  test_monitoring_pipeline.py  test_params.py  test_perf_monitor.py  test_producer.py  test_registry.py  test_retrain_trigger.py  test_retraining_pipeline.py  test_select_v.py  test_serving_features.py  test_serving_model.py  test_serving_predict.py  test_serving_request.py  test_serving_security.py  test_stream.py  test_streaming.py  (+3 more)
(+3 files in other folders)
