[project]
name = "argus"
version = "0.1.0"
description = "Real-time fraud detection as a production-grade ML system"
readme = "README.md"
requires-python = ">=3.11,<3.13"
# Runtime dependencies for the serving and monitoring containers only. Training
# and data tooling live in the "pipeline" group so they stay out of the image.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "numpy>=2.0,<3",
    "pandas>=2.2,<3",
    "pyarrow>=21",
    "pyyaml>=6.0.3",
    "feast[redis]>=0.63",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "mlflow>=3.0",
    "bentoml>=1.4.39",
    "confluent-kafka>=2.14.0",
    "requests>=2.34.2",
    "evidently>=0.7.21",
    "prometheus-client>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "pandas-stubs>=2.2,<3",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
]
# Training and data-pipeline tooling. Installed on the host and in CI (see
# default-groups) but excluded from the serving/monitoring image.
pipeline = [
    "pandera>=0.31.1",
    "dvc>=3.67.1",
    "kaggle>=2.1.2",
    "optuna>=4.0",
    "shap>=0.46",
    "prefect>=3.0",
    "matplotlib>=3.9",
]

[tool.uv]
default-groups = ["dev", "pipeline"]

[[tool.mypy.overrides]]
module = ["xgboost.*", "lightgbm.*", "optuna.*", "shap.*", "matplotlib.*", "sklearn.*", "joblib.*", "evidently.*", "pyarrow.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "pipelines"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "PTH", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
no_implicit_reexport = true
mypy_path = "src"
files = ["src", "tests", "pipelines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-ra -q"
markers = [
    "integration: requires the docker compose stack",
    "load: load and latency tests",
]
